Move the legend down
  Ref:#444

--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
@@ -34,7 +34,7 @@
 	               data-unit-conver="false"
 	               data-slider-selector="#slider">
 				</div>
-				<div class="span3" style="position: relative;width: 400px;">
+				<div class="span3" style="position: relative;width: 400px;margin-top:5px;">
 					<div id="smoother" title="Smoothing"></div>
 					<div id="legend1"></div>
 				</div>
@@ -53,7 +53,7 @@
 		             data-unit-conver="false"
 		             data-slider-selector="#slider">
 		        </div>
-		        <div class="span3" style="position: relative;width: 400px;">
+		        <div class="span3" style="position: relative;width: 400px;margin-top:5px;">
 		        	<div id="smoother" title="Smoothing"></div>
 		        	<div id="legend2"></div>
 		        </div>
@@ -86,7 +86,7 @@
 	               data-smoother-selector="#smoother"
 	               data-slider-selector="#slider">
 				</div>
-				<div class="span3" style="position: relative;width: 400px;">
+				<div class="span3" style="position: relative;width: 400px;margin-top:5px;">
 					<div id="smoother" title="Smoothing"></div>
 					<div id="legend3"></div>
 				</div>
@@ -105,7 +105,7 @@
 					data-smoother-selector="#smoother"
 					data-slider-selector="#slider">
 				</div>
-				<div class="span3" style="position: relative;width: 400px;">
+				<div class="span3" style="position: relative;width: 400px;margin-top:5px;">
 					<div id="smoother" title="Smoothing"></div>
 					<div id="legend4"></div>
 				</div>
