--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
@@ -123,7 +123,7 @@
                data-smoother-selector="#smoother"
                data-slider-selector="#slider">
           </div>
-          <div class="span3" style="position: relative;width: 500px;">
+          <div class="span3" style="position: relative;width: 500px;margin-top:5px;">
 	      	<div id="smoother" title="Smoothing"></div>
 	      	<div id="legend"></div>
 	      </div>
