--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -47,7 +47,7 @@
 							data-unit-conver="false"
 							data-slider-selector="#slider">
 					</div>
-					<div class="span3" style="position: relative;width: 400px;">
+					<div class="span3" style="position: relative;width: 400px;margin-top:5px;">
 						<div id="smoother" title="Smoothing"></div>
 						<div id="legend1"></div>
 					</div>
@@ -66,7 +66,7 @@
 	        		data-unit-conver="false"
 	        		data-slider-selector="#slider">
 	        	</div>
-	        	<div class="span3" style="position: relative;width: 400px;">
+	        	<div class="span3" style="position: relative;width: 400px;margin-top:5px;">
 	        		<div id="smoother" title="Smoothing"></div>
 	        		<div id="legend2"></div>
 	        	</div>
@@ -107,7 +107,7 @@
 					data-unit-conver="true"
 					data-slider-selector="#slider">
 				</div>
-				<div class="span3" style="position: relative;width: 400px;">
+				<div class="span3" style="position: relative;width: 400px;margin-top:5px;">
 					<div id="smoother" title="Smoothing"></div>
 					<div id="legend3"></div>
 				</div>
@@ -125,7 +125,7 @@
 		        	data-smoother-selector="#smoother"
 		        	data-slider-selector="#slider">
 		        </div>
-		        <div class="span4" style="position: relative;width: 400px;">
+		        <div class="span4" style="position: relative;width: 400px;margin-top:5px;">
 		        	<div id="smoother" title="Smoothing"></div>
 		        	<div id="legend4"></div>
 		        </div>
