--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html
@@ -127,7 +127,7 @@
           </div>
           <div id="slider_usage"></div>
       </div>
-      <div class="span3" style="position: relative;width: 500px;">
+      <div class="span3" style="position: relative;width: 500px;margin-top:5px;">
   	  	<div id="smoother" title="Smoothing"></div>
   	  	<div id="legend"></div>
 	    </div>
