--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
@@ -98,16 +98,12 @@
 
 <div class="info row-fluid detail">
   <div class="span12">
-    <div style="width:80%;margin-bottom:30px">
-      <h4 style="float:left;">
-        {% trans "Statistics of all resources" %}
-      </h4>
-        <a style="float:right" href="javascript:void(0);" onClick="csv();" title="{% trans 'Download CSV Report' %}" 
-              class="btn btn-small btn-download" id="project_usage__action_csv_summary">{% trans "Download CSV Report" %}</a>
-    </div>
-    <div>
-      <hr class="header_rule" />
-    </div>
+	<h4 style="height:30px;">
+		<span style="float:left;margin-top:8px;">{% trans "Statistics of all resources" %}</span>
+		<a style="float:right;" href="javascript:void(0);" onClick="csv();" title="{% trans 'Download CSV Report' %}" 
+			class="btn btn-small btn-download" id="project_usage__action_csv_summary">{% trans "Download CSV Report" %}</a>
+	</h4>
+	<hr class="header_rule" />
     <div class="info row-fluid detail">
       <div class="span9 chart_container" style="width: 80%;">
           <div class="chart"
